# graph-attention-engine

./: .gitignore  AGENTS.md  API_CONTRACT.md  CLAUDE.md  CODEBASE.md  CODE_GRAPH_REVIEW.md  DEPENDENCIES.md  LICENSE  PROJECT_STRUCTURE.md  README.md  REVIEW.md  REVIEW.part1.md  REVIEW.part2.md  REVIEW.part3.md  TEST_CATEGORIES.md  gae_project_structure.md  prompt0_gae_structural_map.py  pyproject.toml  test_results_gae.txt
.claude/: settings.local.json
docs/: gae_design_v10.md  gae_design_v10_6.md  gae_design_v5.md  gae_design_v7.md  gae_design_v8_3.md  math_synopsis_v13.md  math_synopsis_v14.md  users_guide.md
gae/: __init__.py  ablation.py  batch_pipeline.py  bootstrap.py  calibration.py  contracts.py  convergence.py  covariance.py  dk_estimator.py  enrichment_advisor.py  evaluation.py  events.py  evolution.py  factors.py  judgment.py  kernel_selector.py  kernels.py  learning.py  novelty.py  oracle.py  primitives.py  profile_scorer.py  referral.py  scoring.py  shrinkage.py  snr.py  store.py  synthetic.py  two_phase.py
graph_attention_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
tests/: test_ablation.py  test_adversarial_inputs.py  test_api_contract.py  test_batch_pipeline.py  test_bootstrap.py  test_calibration.py  test_conservation_monitor.py  test_conservation_state_machine.py  test_consumer_contracts.py  test_consumer_roundtrip.py  test_contracts.py  test_convergence.py  test_covariance.py  test_determinism.py  test_diagonal_kernel.py  test_dk_estimator.py  (+39 more)
(+6 files in other folders)
