[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-attention-engine"
version = "0.7.9"
description = "Standalone numpy-only graph attention library (GAE v5)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gae*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
